# row_computer

./: README.md
row_computer/: .gitignore  CMakeLists.txt  README.md
row_computer/main/: CMakeLists.txt  main.c  timing.c
row_computer/main/config/: common_constants.h  pin_definitions.h  timing_config.h
row_computer/main/sensors/: accel.c  accel.h  gps.c  gps.h  gyro.c  gyro.h  mag.c  mag.h  mpu6050.c  mpu6050.h  sensors_common.c  sensors_common.h
row_computer/main/tasks/: calibration_filter_task.c  display_task.c  gps_task.c  gps_task.h  logging_task.c  logging_task.h  motion_fusion_task.c  processing_task.c  processing_task.h  sensor_task.c  sensor_task.h  tasks_common.c  tasks_common.h
row_computer/main/utils/: boot_progress.c  boot_progress.h  error_utils.c  error_utils.h  health_monitor.c  health_monitor.h  protocol_init.c  protocol_init.h  queue_utils.c  queue_utils.h  timing.c  timing.h  timing_utils.c  timing_utils.h
