idf_component_register(
    SRCS
        "main.c"
        "sensors/mpu6050.c"
        "sensors/mag.c"
        "sensors/gps.c"
        "sensors/sensors_common.c"
        "utils/protocol_init.c"
        "utils/boot_progress.c"
        "utils/timing_utils.c"
        "utils/queue_utils.c"
        "utils/health_monitor.c"
        "tasks/tasks_common.c"
        "tasks/sensor_task.c"
        "tasks/gps_task.c"
        "tasks/calibration_filter_task.c"
        "tasks/motion_fusion_task.c"
        "tasks/display_task.c"
    INCLUDE_DIRS
        "."
        "sensors"
        "config"
        "utils"
        "tasks"
)